--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+    <li><a routerLink="">Home</a></li>
+    <li><a routerLink="about">About</a></li>
+    <li><a routerLink="about/1847">About</a></li>
 </ul>
 
 <router-outlet></router-outlet>
